syntax = "proto3";

package com.sitewhere.grpc.service;

option java_multiple_files = true;
option java_package = "com.sitewhere.grpc.service";
option java_outer_classname = "UserServices";

import "user-model.proto";

// User management APIs.
service UserManagement {

	// #############
	// ### USERS ###
	// #############

	// Create a new user.
	rpc CreateUser (GCreateUserRequest) returns (GCreateUserResponse) {}

	// Import an existing user.
	rpc ImportUser (GImportUserRequest) returns (GImportUserResponse) {}

	// Authenticate credentials.
	rpc Authenticate (GAuthenticateRequest) returns (GAuthenticateResponse) {}

	// Update an existing user.
	rpc UpdateUser (GUpdateUserRequest) returns (GUpdateUserResponse) {}

	// Get user by username.
	rpc GetUserByUsername (GGetUserByUsernameRequest) returns (GGetUserByUsernameResponse) {}

	// List users that meet criteria.
	rpc ListUsers (GListUsersRequest) returns (GListUsersResponse) {}

	// Delete an existing user.
	rpc DeleteUser (GDeleteUserRequest) returns (GDeleteUserResponse) {}

	// ###########################
	// ### GRANTED AUTHORITIES ###
	// ###########################

	// Create a granted authority.
	rpc CreateGrantedAuthority (GCreateGrantedAuthorityRequest) returns (GCreateGrantedAuthorityResponse) {}

	// Get granted authority by name.
	rpc GetGrantedAuthorityByName (GGetGrantedAuthorityByNameRequest) returns (GGetGrantedAuthorityByNameResponse) {}

	// Update an existing granted authority.
	rpc UpdateGrantedAuthority (GUpdateGrantedAuthorityRequest) returns (GUpdateGrantedAuthorityResponse) {}

	// List granted authorities that match criteria.
	rpc ListGrantedAuthorities (GListGrantedAuthoritiesRequest) returns (GListGrantedAuthoritiesResponse) {}

	// Delete an existing granted authority.
	rpc DeleteGrantedAuthority (GDeleteGrantedAuthorityRequest) returns (GDeleteGrantedAuthorityResponse) {}

	// Get granted authorities for a user.
	rpc GetGrantedAuthoritiesForUser (GGetGrantedAuthoritiesRequest) returns (GGetGrantedAuthoritiesResponse) {}

	// Add granted authorities for a user.
	rpc AddGrantedAuthoritiesForUser (GAddGrantedAuthoritiesRequest) returns (GAddGrantedAuthoritiesResponse) {}

	// Remove granted authorities for a user.
	rpc RemoveGrantedAuthoritiesForUser (GRemoveGrantedAuthoritiesRequest) returns (GRemoveGrantedAuthoritiesResponse) {}
}

// #############
// ### USERS ###
// #############
	
// Request for creating a user.
message GCreateUserRequest {
	com.sitewhere.grpc.model.GUserCreateRequest request = 1;
	bool encodePassword = 2;
}

// Response from creating a user.
message GCreateUserResponse {
	com.sitewhere.grpc.model.GUser user = 1;
}
	
// Request for importing a user.
message GImportUserRequest {
	com.sitewhere.grpc.model.GUser user = 1;
	bool overwrite = 2;
}

// Response from creating a user.
message GImportUserResponse {
	com.sitewhere.grpc.model.GUser user = 1;
}

// Request for authentication.
message GAuthenticateRequest {
	string username = 1;
	string password = 2;
	bool updateLastLogin = 3;
}

// Response for authentication.
message GAuthenticateResponse {
	com.sitewhere.grpc.model.GUser user = 1;
}

// Request for updating a user.
message GUpdateUserRequest {
	string username = 1;
	com.sitewhere.grpc.model.GUserCreateRequest request = 2;
	bool encodePassword = 3;
}

// Response for updating a user.
message GUpdateUserResponse {
	com.sitewhere.grpc.model.GUser user = 1;
}

// Request for getting user by username.
message GGetUserByUsernameRequest {
	string username = 1;
}

// Response for getting user by username.
message GGetUserByUsernameResponse {
	com.sitewhere.grpc.model.GUser user = 1;
}

// Request for listing users that meet criteria.
message GListUsersRequest {
	com.sitewhere.grpc.model.GUserSearchCriteria criteria = 1;
}

// Response for listing users that meet criteria.
message GListUsersResponse {
	com.sitewhere.grpc.model.GUserSearchResults results = 1;
}

// Request for deleting a user.
message GDeleteUserRequest {
	string username = 1;
}

// Response for deleting a user.
message GDeleteUserResponse {
	com.sitewhere.grpc.model.GUser user = 1;
}

// ###########################
// ### GRANTED AUTHORITIES ###
// ###########################

// Request for creating a granted authority.
message GCreateGrantedAuthorityRequest {
	com.sitewhere.grpc.model.GGrantedAuthorityCreateRequest request = 1;
}

// Response for creating a granted authority.
message GCreateGrantedAuthorityResponse {
	com.sitewhere.grpc.model.GGrantedAuthority authority = 1; 
}

// Request for getting a granted authority by name.
message GGetGrantedAuthorityByNameRequest {
	string name = 1;
}

// Response for getting a granted authority by name.
message GGetGrantedAuthorityByNameResponse {
	com.sitewhere.grpc.model.GGrantedAuthority authority = 1; 
}

// Request for updating a granted authority.
message GUpdateGrantedAuthorityRequest {
	string name = 1;
	com.sitewhere.grpc.model.GGrantedAuthorityCreateRequest request = 2;
}

// Response for updating a granted authority.
message GUpdateGrantedAuthorityResponse {
	com.sitewhere.grpc.model.GGrantedAuthority authority = 1; 
}

// Request for listing authorities by critieria.
message GListGrantedAuthoritiesRequest {
	com.sitewhere.grpc.model.GGrantedAuthoritySearchCriteria criteria = 1;
}

// Response for listing authorities by critieria.
message GListGrantedAuthoritiesResponse {
	com.sitewhere.grpc.model.GGrantedAuthoritySearchResults results = 1;
}

// Request for getting granted authorities for a user.
message GGetGrantedAuthoritiesRequest {
	string username = 1;
}

// Request for deleting a granted authority.
message GDeleteGrantedAuthorityRequest {
	string name = 1;
}

// Response for deleting a granted authority.
message GDeleteGrantedAuthorityResponse {
	com.sitewhere.grpc.model.GGrantedAuthority authority = 1; 
}

// Response for getting granted authorities for a user.
message GGetGrantedAuthoritiesResponse {
	repeated com.sitewhere.grpc.model.GGrantedAuthority authorities = 1; 
}

// Request for adding granted authorities for a user.
message GAddGrantedAuthoritiesRequest {
	string username = 1;
	repeated string authorities = 2; 
}

// Response for adding granted authorities for a user.
message GAddGrantedAuthoritiesResponse {
	repeated com.sitewhere.grpc.model.GGrantedAuthority authorities = 1; 
}

// Request for removing granted authorities for a user.
message GRemoveGrantedAuthoritiesRequest {
	string username = 1;
	repeated string authorities = 2; 
}

// Response for removing granted authorities for a user.
message GRemoveGrantedAuthoritiesResponse {
	repeated com.sitewhere.grpc.model.GGrantedAuthority authorities = 1; 
}
